[package]
name = "tokio-curl"
version = "0.1.11"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/tokio-curl"
homepage = "https://github.com/tokio-rs/tokio-curl"
documentation = "https://docs.rs/tokio-curl"
description = """
An implementation of an asynchronous HTTP client using futures backed by
libcurl.
"""
categories = ["asynchronous", "web-programming::http-client"]

[badges]
travis-ci = { repository = "tokio-rs/tokio-curl" }
appveyor = { repository = "alexcrichton/tokio-curl" }

[dependencies]
curl = "0.4.10"
futures = "0.1.15"
log = "0.4"
tokio-io = "0.1"
tokio-core = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
mio = "0.6.5"
slab = "0.4"
scoped-tls = "0.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winsock2"]

[dev-dependencies]
env_logger = { version = "0.4", default-features = false }
